@@ -30,6 +30,7 @@
 * Fix - Incorrect error message when card ZIP validation fails.
 * Update - Display hardware costs for the period in the transaction list with link to the details page
 * Add - `Requires PHP` and `Requires at least` to the main plugin file.
+* Fix - Incorrect customer links on Transactions page.
 * Add - Allow UI customizations on checkout payment fields.
 
 = 3.2.3 - 2021-11-01 =
